# nearby

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: lint.yaml
config/: example.toml
src/: config.rs  delayed.rs  idle.rs  main.rs
src/commands/: mod.rs
systemd/: nearby.service
