[package]
name = "nearby"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bluer = { version = "0.17.3", features = ["full"] }
clap = { version = "4.5.30", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.6"
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3.31"
serde = "1.0.217"
tokio = { version = "1.43.0", features = ["full"] }
